# HW10_1

./: .coverage  main.py  pyproject.toml
src/: decorators.py  generators.py  logger.py  masks.py  pandas_work.py  processing.py  utils.py  widget.py
tests/: test_decorators.py  test_generators.py  test_masks.py  test_pandas_work.py  test_processing.py  test_utils.py  test_widget.py  tests_masks.py
