[tool.poetry]
name = "skypro2"
version = "0.1.0"
description = ""
authors = ["Nastya Sol <an5oldatova@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"
flake8 = "^7.0.0"


[tool.poetry.group.lint.dependencies]
mypy = "^1.9.0"
black = "^24.3.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
